# cabal2ebuild

./: .gitignore  Depend.hs  Hakefile  cabal2ebuild.cabal  cabal2ebuild.hs  memo.ja
src/: Depend.hs  cabal2ebuild.hs
src-exec/: cabal2ebuild.hs  hackage2ebuild.hs
src-lib/Gentoo/: Cabal2Ebuild.hs  Depend.hs
test/: testCurl.hs  testDepend.hs
