Name:                cabal2ebuild
Version:             0.0.15
Synopsis:            yet
Description:         yet 
Homepage:            yet
License:             BSD3
License-file:        LICENSE
Author:              Yoshikuni Jujo
Maintainer:          PAF01143@nifty.ne.jp
-- Copyright:           
Category:            Cryptography
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.6

source-repository head
  type:		git
  location:	git://github.com/YoshikuniJujo/cabal2ebuild.git

executable cabal2ebuild
  main-is:       cabal2ebuild.hs
  other-modules: Depend
  build-depends: base >= 4, directory, Cabal, filepath
  Ghc-options:		-Wall
